--- a/Mobile Development/app/src/main/res/layout/item_chatbot_message.xml
+++ b/Mobile Development/app/src/main/res/layout/item_chatbot_message.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="24dp">
+    android:layout_marginBottom="24dp"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/chatbot_image"
@@ -26,12 +26,8 @@
     <TextView
         android:id="@+id/chatbot_message"
         style="@style/chatbot_text"
-        android:layout_width="180dp"
         android:layout_marginTop="16dp"
         android:background="@drawable/custom_chat_bot"
-        android:lineSpacingExtra="5dp"
-        android:textAlignment="textEnd"
-        android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="@id/guideline_vertical2"
         app:layout_constraintHorizontal_bias="0"
         app:layout_constraintStart_toEndOf="@id/chatbot_image"
@@ -52,32 +48,34 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:cardCornerRadius="50dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:contentDescription="@string/user_image"
-            tools:layout_height="32dp"
+            tools:src="@drawable/user_profile_image"
             tools:layout_width="32dp"
-            tools:src="@drawable/user_profile_image" />
+            tools:layout_height="32dp"/>
     </androidx.cardview.widget.CardView>
 
     <TextView
-        android:id="@+id/user_message"
         style="@style/user_text"
-        android:layout_width="180dp"
-        android:layout_height="wrap_content"
+        android:id="@+id/user_message"
         android:background="@drawable/custom_chat_user"
-        android:lineSpacingExtra="5dp"
-        android:textAlignment="textEnd"
+        android:layout_width="180dp"
         android:textSize="18sp"
-        app:layout_constraintEnd_toStartOf="@id/user_image"
-        app:layout_constraintHorizontal_bias="1"
-        app:layout_constraintStart_toStartOf="@id/guideline_vertical1"
+        android:fontFamily="@font/poppinsregular"
+        android:shadowColor="@color/black"
+        android:layout_height="wrap_content"
+        android:textAlignment="textEnd"
+        android:lineSpacingExtra="5dp"
+        tools:text="Lorem ipsdwadawdawdadawdawdawdadmet"
         app:layout_constraintTop_toTopOf="parent"
-        tools:text="Lorem ipsdwadawdawdadawdawdawdadmet" />
+        app:layout_constraintStart_toStartOf="@id/guideline_vertical1"
+        app:layout_constraintEnd_toStartOf="@id/user_image"
+        app:layout_constraintHorizontal_bias="1"/>
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline_vertical1"
